force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Own_Property__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Own_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this property is owned by the company itself.</inlineHelpText>
    <label>Own Property</label>
    <type>Checkbox</type>
</CustomField>