force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Parent_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Parent_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Suppliers (Parent Supplier)</relationshipLabel>
    <relationshipName>Suppliers1</relationshipName>
    <type>Lookup</type>
</CustomField>