force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Payment_From_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Payment_From_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment From Bank Account</label>
    <referenceTo>sugati__Bank_Account__c</referenceTo>
    <relationshipLabel>Suppliers</relationshipLabel>
    <relationshipName>Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>