force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Payment_Terms_in_Days__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Payment_Terms_in_Days__c</fullName>
    <label>Payment Terms in Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>