force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Phone__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>