force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Postcode__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Postcode__c</fullName>
    <label>Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>