force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Property_Facilities__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Property_Facilities__c</fullName>
    <label>Property Facilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24hr Security</fullName>
            </value>
            <value>
                <fullName>Activity Desk</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>Barbeque Facilities</fullName>
            </value>
            <value>
                <fullName>Battery Charging Facilities</fullName>
            </value>
            <value>
                <fullName>Business Centre</fullName>
            </value>
            <value>
                <fullName>Chapel</fullName>
            </value>
            <value>
                <fullName>Communal Dining</fullName>
            </value>
            <value>
                <fullName>Conference Centre</fullName>
            </value>
            <value>
                <fullName>Disability Services</fullName>
            </value>
            <value>
                <fullName>Eco Friendly</fullName>
            </value>
            <value>
                <fullName>Gym</fullName>
            </value>
            <value>
                <fullName>Gym (nearby)</fullName>
            </value>
            <value>
                <fullName>Internet Access</fullName>
            </value>
            <value>
                <fullName>Internet Access Complimentary</fullName>
            </value>
            <value>
                <fullName>Internet Access (Paid)</fullName>
            </value>
            <value>
                <fullName>Kiddies Club</fullName>
            </value>
            <value>
                <fullName>Laundry Service (Available)</fullName>
            </value>
            <value>
                <fullName>Laundry Service (Complimentary)</fullName>
            </value>
            <value>
                <fullName>Library</fullName>
            </value>
            <value>
                <fullName>Meal on Request</fullName>
            </value>
            <value>
                <fullName>Mobile Connectivity</fullName>
            </value>
            <value>
                <fullName>Pool</fullName>
            </value>
            <value>
                <fullName>Private Vehicle Available</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Secure Parking</fullName>
            </value>
            <value>
                <fullName>Skype Phones</fullName>
            </value>
            <value>
                <fullName>Spa</fullName>
            </value>
            <value>
                <fullName>TV Room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>