force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allow users to see rates in the room booking tab for this supplier.</inlineHelpText>
    <label>Rate</label>
    <type>Checkbox</type>
</CustomField>