force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Rating__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Rating__c</fullName>
    <inlineHelpText>Only For Accommodation</inlineHelpText>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>