force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Recommended__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Recommended__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should be checked if you want to show the supplier as recommended in the suggestion.</inlineHelpText>
    <label>Recommended</label>
    <type>Checkbox</type>
</CustomField>