force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Room_Facilities__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Room_Facilities__c</fullName>
    <label>Room Facilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Conditioning</fullName>
            </value>
            <value>
                <fullName>Balcony / Deck</fullName>
            </value>
            <value>
                <fullName>Bath</fullName>
            </value>
            <value>
                <fullName>Clothes Press</fullName>
            </value>
            <value>
                <fullName>Complimentary Wi-Fi</fullName>
            </value>
            <value>
                <fullName>Cooking Equipment</fullName>
            </value>
            <value>
                <fullName>Cooking Facilities</fullName>
            </value>
            <value>
                <fullName>Detached Private Bathroom</fullName>
            </value>
            <value>
                <fullName>Disabled Rooms</fullName>
            </value>
            <value>
                <fullName>Dressing Gowns</fullName>
            </value>
            <value>
                <fullName>Electrical Outlets</fullName>
            </value>
            <value>
                <fullName>En-Suite</fullName>
            </value>
            <value>
                <fullName>Fan</fullName>
            </value>
            <value>
                <fullName>Fireplace</fullName>
            </value>
            <value>
                <fullName>Fridge</fullName>
            </value>
            <value>
                <fullName>Hair Dryer</fullName>
            </value>
            <value>
                <fullName>Heated Towel Rails</fullName>
            </value>
            <value>
                <fullName>Heater</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Internet Access (Complimentary)</fullName>
            </value>
            <value>
                <fullName>Internet Access (Paid)</fullName>
            </value>
            <value>
                <fullName>Iron / Ironing Board</fullName>
            </value>
            <value>
                <fullName>Laundry Facilities</fullName>
            </value>
            <value>
                <fullName>Laundry Service (Available)</fullName>
            </value>
            <value>
                <fullName>Laundry Service (Complimentary)</fullName>
            </value>
            <value>
                <fullName>Lounge Area</fullName>
            </value>
            <value>
                <fullName>Mini Bar</fullName>
            </value>
            <value>
                <fullName>Mini Bar (Complimentary)</fullName>
            </value>
            <value>
                <fullName>Mosquito Nets</fullName>
            </value>
            <value>
                <fullName>Outside Shower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>