force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_S_Agency_Commission_Based_On__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_S_Agency_Commission_Based_On__c</fullName>
    <label>Agency Commission Based On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gross Sell Price</fullName>
                <default>true</default>
                <label>Gross Sell Price</label>
            </value>
            <value>
                <fullName>Profit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>