force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_S_Agency_is_End_Customer__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_S_Agency_is_End_Customer__c</fullName>
    <label>Agency is End Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>