force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_S_Commission_Term__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_S_Commission_Term__c</fullName>
    <label>Commission Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
                <default>true</default>
                <label>Immediate</label>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>