force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_S_Markup__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_S_Markup__c</fullName>
    <label>Markup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>