force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_S_Markup_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_S_Markup_Type__c</fullName>
    <label>Markup Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
                <default>true</default>
                <label>Percentage</label>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>