force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_S_Recommended_Label__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_S_Recommended_Label__c</fullName>
    <formula>IF(sugati__S_Recommended__c, &apos;RECOMMENDED&apos;, &apos;&apos;)</formula>
    <label>Recommended Label</label>
    <type>Text</type>
</CustomField>