force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_S_Sugati_Supplier_Data_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_S_Sugati_Supplier_Data_Id__c</fullName>
    <label>Sugati Supplier Data Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>