force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_S_Supplier_Token__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_S_Supplier_Token__c</fullName>
    <externalId>true</externalId>
    <label>Supplier Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>