force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_S_Use_Rate_Record_for_Availability__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_S_Use_Rate_Record_for_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, availability information will be stored at the rate level, but only a single rate will be available per day.</description>
    <label>Use Rate Record for Availability</label>
    <type>Checkbox</type>
</CustomField>