force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Show_VAT_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Show_VAT_on_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show VAT on Invoice</label>
    <type>Checkbox</type>
</CustomField>