force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Special_Interests__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Special_Interests__c</fullName>
    <label>Special Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adventure</fullName>
            </value>
            <value>
                <fullName>Baby Sitting</fullName>
            </value>
            <value>
                <fullName>Battlefields</fullName>
            </value>
            <value>
                <fullName>Beach / Coastal</fullName>
            </value>
            <value>
                <fullName>Big 5</fullName>
            </value>
            <value>
                <fullName>Birding</fullName>
            </value>
            <value>
                <fullName>Children Friendly</fullName>
            </value>
            <value>
                <fullName>Cycling</fullName>
            </value>
            <value>
                <fullName>Disabled Friendly</fullName>
            </value>
            <value>
                <fullName>Exhibition Area</fullName>
            </value>
            <value>
                <fullName>Fishing</fullName>
            </value>
            <value>
                <fullName>Flora</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Gourmet</fullName>
            </value>
            <value>
                <fullName>Great Barrier Reef</fullName>
            </value>
            <value>
                <fullName>Hiking</fullName>
            </value>
            <value>
                <fullName>History &amp; Culture</fullName>
            </value>
            <value>
                <fullName>Indigenous Culture / Art</fullName>
            </value>
            <value>
                <fullName>Leisure</fullName>
            </value>
            <value>
                <fullName>Nature</fullName>
            </value>
            <value>
                <fullName>Power Generator</fullName>
            </value>
            <value>
                <fullName>Relaxation</fullName>
            </value>
            <value>
                <fullName>Satellite TV</fullName>
            </value>
            <value>
                <fullName>Secure Parking</fullName>
            </value>
            <value>
                <fullName>Shopping</fullName>
            </value>
            <value>
                <fullName>Special Equipment Entrance</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Star Gazing</fullName>
            </value>
            <value>
                <fullName>Watersports</fullName>
            </value>
            <value>
                <fullName>Wildlife</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>