force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Special_Offers_Group__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Special_Offers_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Special Offers Group</label>
    <referenceTo>sugati__Special_Offer__c</referenceTo>
    <relationshipLabel>Suppliers</relationshipLabel>
    <relationshipName>Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>