force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_State__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>