force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Total_Bed_Nights__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Total_Bed_Nights__c</fullName>
    <description>Total Bed Nights where applicable spent with the supplier</description>
    <label>Total Bed Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>