force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Total_Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Total_Commission_Value__c</fullName>
    <description>Total Commission Revenue the Supplier has generated so far.</description>
    <inlineHelpText>Total Commission Revenue the Supplier has generated.</inlineHelpText>
    <label>Total Commission Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>