force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Universally_Available_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Universally_Available_Supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is checked then this supplier will be available in Itinerary Builder no matter which traveling country it is.</inlineHelpText>
    <label>Universally Available Supplier</label>
    <type>Checkbox</type>
</CustomField>