force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_VAT__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_VAT__c</fullName>
    <label>VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>