force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_VAT_Applicable__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_VAT_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAT Applicable?</label>
    <type>Checkbox</type>
</CustomField>