force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_VAT_Note__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_VAT_Note__c</fullName>
    <label>VAT Note</label>
    <type>TextArea</type>
</CustomField>