force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Website__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Website__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>