force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_WeTu_PIN__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_WeTu_PIN__c</fullName>
    <description>WeTu PIN identifier for syncing supplier data</description>
    <externalId>true</externalId>
    <label>WeTu PIN</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>