force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_What_to_do__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_What_to_do__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>What to do</label>
    <referenceTo>sugati__Activity__c</referenceTo>
    <relationshipLabel>Suppliers</relationshipLabel>
    <relationshipName>Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>