force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Where_to_go__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Where_to_go__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Where to go</label>
    <referenceTo>sugati__Where_to_go__c</referenceTo>
    <relationshipLabel>Suppliers</relationshipLabel>
    <relationshipName>Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>