force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Widgety_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Widgety_Last_Updated_Date__c</fullName>
    <label>Widgety Last Updated Date</label>
    <type>DateTime</type>
</CustomField>