force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Widgety_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Widgety_Reference_ID__c</fullName>
    <label>Widgety Reference ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>