force-app/main/default/objects/sugati__Supplier__c/recordTypes/sugati__Accommodation.recordType-meta.xml
<RecordType>
    <fullName>sugati__Accommodation</fullName>
    <active>true</active>
    <label>Accommodation</label>
</RecordType>