force-app/main/default/objects/sugati__Supplier__c/recordTypes/sugati__Agency.recordType-meta.xml
<RecordType>
    <fullName>sugati__Agency</fullName>
    <active>true</active>
    <label>Agency</label>
</RecordType>