force-app/main/default/objects/sugati__Supplier__c/recordTypes/sugati__Boat.recordType-meta.xml
<RecordType>
    <fullName>sugati__Boat</fullName>
    <active>true</active>
    <label>Boat</label>
</RecordType>